<resources>
    <string name="app_name">What\'sAppClone</string>
    <string name="send">Отправить</string>
    <string name="type_message">Введите сообщение</string>
    <string name="send_photo">Отправка фото</string>
    <string name="text">Text</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="your_name">Your Name</string>
    <string name="sing_up">Sing Up</string>
    <string name="tap_to_log_in">Tap to Log In</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
